<resources>
    <string name="app_name">DebugME</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="near_by_developers">Near me</string>
    <string name="post_a_question">Post</string>
    <string name="feed">Feed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="near_by">Near by</string>
    <string name="why_does_the_earth_doesnot_spin_everywhere_if_it_does_why_dont_it_spin_over_my_head">Why does the earth doesnot spin everywhere? if it does why dont it spin over my head?</string>
    <string name="swami_nithyananda">Swami Nithyananda</string>
    <string name="self_proclaimed_god">Self proclaimed God</string>
    <string name="prem_kishore">Prem Kishore</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="qns_answered">Qns Answered</string>
    <string name="qns_asked">Qns Asked</string>
    <string name="user_name">user name</string>
    <string name="tag">tag</string>
    <string name="_00">00</string>
    <string name="current_points_00">current points : 00</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="update_profile_photo">Update Profile Photo</string>
    <string name="personal_info">Personal Information :</string>
    <string name="profile_info">Profile Information :</string>
    <string name="technical_info">Technical Information :</string>
    <string name="user_skills_hint">Skills</string>
    <string name="skills_updator">Update Your Skills</string>
    <string name="delete_account">Delete account</string>

    <string name="about_app1">DebugME is the brainchild of our team with the desire of creating a strong developers community.</string>

    <string name="about_app2">It connects the user to the local developers who are in turn connected to their locals.</string>

    <string name="about_app3">This helps one to communicate and collaborate with other liked minded developers easily.</string>

    <string name="about_app4">Our main aim is to build a global platform for developers to help them learn, explore and help each other.</string>

    <string name="about_app5">It is a great platform for amateur developers to resolve their difficulties in learning by getting optimal solutions from the local developers.</string>

    <string name="about_app6">The app is supported by both android and ios systems with a minimum android version of 7.0(Nougat).</string>

    <string name="about_app7">It reads the live location of the user to help him connect with the local developers.</string>

    <string name="about_app8">We are planning to provide points system on the app encourages developers to help other.</string>

    <string name="about_app8__">We also planning to provide a chatting feature to the users so that they can personally contact individuals.</string>

    <string name="about_app9">The home page feed is generated by accessing the information from local developers.</string>

    <string name="about_app10">This is a minimum viable product and we wish to develop more features to give better flexibility to the app. </string>

    <string name="our_team1">We are amateur developers pursuing BTech in Electronics and Communication engineering.</string>

    <string name="vallabha1">Shreevallabha A</string>

    <string name="vallabha2">I am an ECE undergrad, who loves to design circuits, work with Embedded systems and IoT. I have a great interest in learning : Electronics and programming</string>

    <string name="niran1">Niran N</string>

    <string name="niran2">Make Programs, Not Wars. Spread Virus, Not Hate. Noob. Programmer. Pianist. Otaku. I play with circuits when bored. B.Tech 2022.</string>

    <string name="pats1">T Prathyusha</string>

    <string name="pats2">Frontend and BlockChain developer, addicted the joy of learning everyday. Curious about Machine learning, IoT and Cloud. Fascinated in astronomy. Infinite love to plants and stars.</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_text">New user?</string>
    <string name="singupbutton">Sign Up</string>
    <string name="loginbutton">Login</string>
    <string name="user_first_name">First Name :</string>
    <string name="user_first_name_hint">First name</string>
    <string name="user_last_name">Last Name :</string>
    <string name="user_last_name_hint">Last name</string>
    <string name="user_email">Email :</string>
    <string name="user_email_hint">Email</string>
    <string name="user_phone_num">Phone No. :</string>
    <string name="user_phone_num_hint">Phone no</string>
    <string name="user_country">Country :</string>
    <string name="user_country_hint">Country</string>
    <string name="user_age">Age :</string>
    <string name="user_password">Password :</string>
    <string name="user_password_hint">Password</string>
    <string name="user_username">UserName :</string>
    <string name="user_username_hint">Username</string>
    <string name="user_confirm_password">"Confirm
Password :"</string>
    <string name="user_confirm_password_hint">Confirm password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login_text">Already a user?</string>
    <string name="login_page_redirect">Login</string>
    <string name="user_age_hint">Age</string>
    <string name="user_skills">Skills :</string>
    <string name="skills_selector">Select your skills</string>
    <string name="choose_image">Upload photo</string>
    <string name="todo">TODO</string>
    <string name="choose_date">Choose Date</string>
    <string name="register_title">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_gender">Gender :</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_other">Other</string>
    <string name="user_github">GitHub Profile :</string>
    <string name="user_github_hint">GitHub profile</string>
    <string name="full_name_hint">Name</string>
    <string name="multiQn_text">This is my question with respect to the image, i have attached below, i am not able to eat or vomit anything\n\nAlso this is the first time i am not able to peace as well what to do now???.\n\n</string>
    <string-array name="user_age__array">
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
    </string-array>
</resources>